@@ -70,6 +70,12 @@ b06f3c90dc1365b2f9686e79734d677beae09c3ac5e09697cf62ceedd3dc2437  test/results/f
 b4b5f7b6d3611f2a9e21af1b580026aaed45267bab5946fb8353c63145df5e2e  test/results/forward_declare.c-riscv32-binary
 8bba7a441ce8e3620fc3ad8657d741696c7eeac704d031c9f62c0028be66e512  test/results/forward_declare.c-riscv64-binary
 a885daefe8c37ffa20e07186521c0370a359949afe2057a608a1520faf39f73e  test/results/forward_declare.c-x86-binary
+724e03fce54c8fb925ae241fd94c06d9e9796d11103cee3191b6bd7ed46f464f  test/results/function_like_macros.c-aarch64-binary
+cb11814fd0718938d796479d0b5910e78e1999bfb1ab47f31833c744ef27e162  test/results/function_like_macros.c-amd64-binary
+e6c4355e531c242b7ac42dba781f6a2c3a80d527cd4e3cb095e0a35b19f9273e  test/results/function_like_macros.c-armv7l-binary
+cf28517b5bde0c80797185e769ae434fede72e3918303e4af4e0baebf5047488  test/results/function_like_macros.c-riscv32-binary
+99e1288e01b85b4a009dcd27b83fcc3315775685ed3e5915aa2c2786744c06a7  test/results/function_like_macros.c-riscv64-binary
+25cf30059e21bf5b211046e52db8505e8bdb5922855651af80741f87be7b7462  test/results/function_like_macros.c-x86-binary
 ea0e7278687f5aef224477226cf3cb7d24e3274bdebb954912dec3bded0d5922  test/results/function_pointers.c-aarch64-binary
 dca8b71100f464df9310dddff404032c597e4be4a569751c18515b9e4939cea9  test/results/function_pointers.c-amd64-binary
 afcafc44af2ed736808f4d1ccdc2adda2787932d315e923213390362a5450f3c  test/results/function_pointers.c-armv7l-binary
@@ -450,13 +456,13 @@ df94cf3bef8f8da5c22d30b26f78e917c22d71721b3da185a56e876c13a3e87d  test/results/t
 00e072d966cb07e65cda37ea352c0bc9891bdf8a8bba21d683007ada8bc246fe  test/results/test0106-riscv32-binary
 83a6029036e6be201153f5c7669ba0b2da570e2321d9f2ef175993231524206b  test/results/test0106-riscv64-binary
 6c34937fdeeb71acca7b8fbb5f7ba6bb4d0c189ee9395639ace92b5950d518a3  test/results/test0106-x86-binary
-5c038caba353ea2830a5400aa9f6da30c60ba1e13258eaf1559a89ab06e3b756  test/results/test1000-aarch64-binary
-2914779c25d8f7fa0a2ea9d6661beb1b23e681939d7484b88065d2bca0e025c7  test/results/test1000-amd64-binary
-736c7ef2d2a16c90b8f8badb1e330f6fd85a47c9116473978818c7bdfd492d9d  test/results/test1000-armv7l-binary
-5c29331cbe52a1c1077d80841d1edd3716ea75c6b58fa9e77895a583f3c1c4da  test/results/test1000-knight-posix-binary
-7a750c2ed9e9f729fd1a2076a980335041d8adade2a8cf9fc4383a627671f958  test/results/test1000-riscv32-binary
-5e95f6f9339459a03ad85d0a9232c1e1414ff8c394622ef959f0e23c678ae1a5  test/results/test1000-riscv64-binary
-458a41ea1d4532bfccf612c9159f6fe8f46ea4d4fc6209353597f597f820dc51  test/results/test1000-x86-binary
+e2bc6b562c8ae465d6fec77f1ec31b697ed973f49489f37e2dfba07fd77ab456  test/results/test1000-aarch64-binary
+f1bad537924ea8df67c9e14f3029ff60c7ff4b9c9b63b260bcb7d70abd5325bc  test/results/test1000-amd64-binary
+7b419994e31e7802fff5681e1374a071fc37020ca7f32c1e3edd8212b26785a9  test/results/test1000-armv7l-binary
+90060d0c4a31eae7fc287ee12995a39b7969aa63df0c080f1c23062725c63b3c  test/results/test1000-knight-posix-binary
+9d761b3a4f157ca7e924f7fd7b7df8ae53ca8cf3d3b99f4f8015a8a5a8ffcc85  test/results/test1000-riscv32-binary
+eca432e5328e2fc35a53346a4028778cf5d30817445823247ab403fec58a8b93  test/results/test1000-riscv64-binary
+e00abd143d381681cfd836670c216abff04d08d6f1ac5d9de41203187ebc58e2  test/results/test1000-x86-binary
 5762a62fa777225e8cef41f48cc4e1010db7978a31d68868ca8e3f2ea73d41b3  test/results/variables.c-aarch64-binary
 e60a3c62aa7ded83a7eceac6961822f86001c751b6832f0ef8a3b12bd5be3039  test/results/variables.c-amd64-binary
 ac1298d6d1d8e4dd5eca046a654987b76ff339ae3124d314f2f3cb53be3cae5b  test/results/variables.c-armv7l-binary
