@@ -32,6 +32,7 @@ Added support for initializing global variables with negative values.
 Added support for declaring variables in for loops
 Added support for using includes with the `--expand-includes` CLI option. Note that including `stdio.h` changes the `M1` libc required from `libc-core.M1` to `libc-full.M1`.
 Added support for spaces between `#` and text in preprocessor commands.
+Added support for multiple tokens as arguments to function-like macros.
 
 ** Changed
 Space for local variables in functions is now allocated up front
